--- a/src/view/html/index.html
+++ b/src/view/html/index.html
@@ -9,20 +9,22 @@
 	</head>
 
 	<body>
-		<div class="group fullHeight" palette="secondary">
-			<title-bar  grid="3/3" palette="primary">
+		<main class="group fullHeight" palette="secondary">
+			<titlebar  grid="3/3" palette="primary">
 				<div class="group">
 					<div id="closeButton" button="circle" palette="danger"></div>
 					<div id="minimizeButton" button="circle" palette="warning"></div>
 				</div>
-			</title-bar>
+			</titlebar>
 
-			<div grid="1/3">
-			</div>
+			<sidebar grid="2/3">
 
-			<div grid="2/3">
-			</div>
-		</div>
+			</sidebar>
+
+			<content grid="1/3" palette="secondary">
+			
+			</content>
+		</main>
 		
 		<script src="js/script.js"></script>
 	</body>
