--- a/src/view/scss/_type.scss
+++ b/src/view/scss/_type.scss
@@ -1,64 +1,30 @@
+@font-face {
+  font-family: 'Roboto';
+  src: url('roboto/Roboto-Thin.woff2') format('woff2');
+  font-weight: 100;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('roboto/Roboto-Light.woff2') format('woff2');
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('roboto/Roboto-Regular.woff2') format('woff2');
+  font-weight: 400;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('roboto/Roboto-Medium.woff2') format('woff2');
+  font-weight: 500;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('roboto/Roboto-Bold.woff2') format('woff2');
+  font-weight: 700;
+}
+
 body {
 	font-size: 100%;
-}
-
-h1, h2, h3, h4, p, .subhead, .caption, .button, a {
-	margin: 0;
-	position: relative;
-	line-height: 1.5em;
-	display: block;
-	font-weight: 300;
-}
-
-h1, h2, h3, h4 {
-}
-
-/*display2*/
-h1 {
-	font-size: 2.8125em; /*45px*/
-	line-height: 1.5em; /*48px*/
-	margin-bottom: 1.5em;
-	top: 0.1875em;
-}
-
-/*display1*/
-h2 {
-	font-size: 2.125em; /*34px*/
-	line-height: 1.5em;
-	margin-bottom: 1em;
-	top: 0.375em;
-}
-
-/*headline*/
-h3 {
-	font-size: 1.5em; /*24px*/
-	margin-bottom: 1em;
-	top: 0.5em;
-}
-
-/*title*/
-h4 {
-	font-size: 1.25em; /*20px*/
-	margin-bottom: 0.5em;
-}
-
-/*body*/
-p, li {
-	font-size: 0.875em; /*14px*/
-	margin-bottom: 1em;
-}
-
-.subhead {
-	font-size: 1em; /*16px*/
-	margin-bottom: 1em;
-}
-
-.caption {
-	font-size: 0.75em; /*12px*/
-}
-
-.button {
-	font-size: 0.875em; /*14px*/
-	text-transform: uppercase;
-	text-align: center;
+	font-family: 'Roboto';
 }
