--- a/src/view/html/index.html
+++ b/src/view/html/index.html
@@ -39,32 +39,16 @@
 					</max>
 				</div>
 
-				<log palette="secondary">
-					<log-item>
-						<log-time palette="warning">10:12am</log-time>
-						<log-content>In mathematics and the arts, two quantities.</log-content> 
-					</log-item>
+				<log id="logWindow" palette="secondary">
 
-					<log-item>
-						<log-time palette="all-clear">10:30am</log-time>
-						<log-content>This equation has as its unique number.</log-content>
-					</log-item>
-
-					<log-item>
-						<log-time palette="all-clear">11:03am</log-time>
-						<log-content>At least siRenaissance, many artists and architects.</log-content>
-					</log-item>
-
-					<log-item>
-						<log-time palette="danger">11:42am</log-time>
-						<log-content>As the sequence approaches infinity.</log-content>
-					</log-item>
 				</log>
 					
 			</content>
 
 			<sidebar grid="1/3" palette="primary">
-			
+				<span type="title">Bulb Name: </span>
+				<span type="title">Bulb Status: </span>
+				<span type="title">Last Event: </span>
 			</sidebar>
 		</main>
 		
