--- a/src/view/scss/_elements.scss
+++ b/src/view/scss/_elements.scss
@@ -4,6 +4,9 @@ body {
 	-webkit-app-region: drag;
 }
 
+main {
+	overflow: hidden;
+}
 main, titlebar, sidebar, content, heartrate, date, minmax, log, titlebuttons {
 	padding: 0;
 	margin: 0;
@@ -17,11 +20,7 @@ titlebar {
 }
 
 sidebar {
-	height: calc(100% - #{$titleHeight})
-}
-
-content {
-	height: calc(100% - #{$titleHeight})
+	height: 100%;
 }
 
 heartrate {
@@ -57,9 +56,8 @@ max {
 
 
 log {
-	height: 285px;
-	flex-direction: column;
-	display: flex;
+	height: 312px;
+	overflow: scroll;
 }
 
 [button] {
@@ -101,21 +99,24 @@ log {
 	align-self: center;
 }
 
-
-
-
 log-item {
 	font-size: 14px;
-	display: flex;
+	display: block;
 }
 
 log-time {
-	flex-basis: 15%;
+	width: 15%;
 	text-align: center;
 }
 
 log-time, log-content {
 	padding: 6px 15px;
+	display: inline-block;
+}
+
+log-content {
+	-webkit-user-select: text;
+	-webkit-app-region: no-drag;
 }
 
 log-item:nth-of-type(2n+1) {
