--- a/src/view/scss/_elements.scss
+++ b/src/view/scss/_elements.scss
@@ -4,10 +4,15 @@ body {
 	-webkit-app-region: drag;
 }
 
+settings {
+	-webkit-app-region: no-drag;
+	outline: none;
+}
+
 main {
 	overflow: hidden;
 }
-main, titlebar, sidebar, content, heartrate, date, minmax, log, titlebuttons {
+main, titlebar, sidebar, content, heartrate, date, minmax, log, title-buttons, application-buttons, settings {
 	padding: 0;
 	margin: 0;
 	display: block;
@@ -25,12 +30,14 @@ sidebar {
 
 heartrate {
 	display: flex;
+	flex-direction: column;
 	margin-bottom: 1px;
-	height: 200px;
-	justify-content: center;
+	height: 185px;
+	justify-content: flex-start;
+	padding-top: 10px;
 }
 
-date, min, max {
+date, average, min, max {
 	height: 85px;
 }
 
@@ -38,22 +45,21 @@ date {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: calc(50% - 1px);
+	width: calc(28% - 1px);
 	margin-right: 1px;
 }
 
-min, max {
+average, min, max {
 	flex-direction: column;
 	display: flex;
 }
-min {
-	width: calc(25% - 1px);
+average, min {
+	width: calc(24% - 1px);
 	margin-right: 1px;
 }
 max {
-	width: 25%;
+	width: 24%;
 }
-
 
 log {
 	height: 312px;
@@ -66,6 +72,7 @@ log {
 	border-width: 1px;
 	border-style: solid;
 	-webkit-app-region: no-drag;
+	cursor: pointer;
 }
 
 [button~="circle"] {
@@ -74,9 +81,19 @@ log {
 	border-radius: 50%;
 }
 
+[button~="box-text"] {
+	padding: 10px;
+	border-radius: 6px;
+	width: calc(50% - 32px);
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: 300;
+}
+
 [number~="bpm"] {
 	font-size: 130px;
 	align-self: center;
+	line-height: 130px;
 }
 
 [number~="time"] {
@@ -93,6 +110,21 @@ log {
 
 [type~="title"] {
 	font-size: 19px;
+	font-weight: 100;
+	padding: 10px 0 3px;
+	display: block;
+	align-self: center;
+}
+
+[type~="group-title"] {
+	font-size: 19px;
+	font-weight: 100;
+	display: block;
+	align-self: center;
+	text-align: center;
+}
+[type~="description"] {
+	font-size: 14px;
 	font-weight: 100;
 	padding: 10px 0 3px;
 	display: block;
@@ -120,16 +152,40 @@ log-content {
 }
 
 log-item:nth-of-type(2n+1) {
-	background-color: rgba(0,0,0, 0.06);
+	background-color: rgba(0,0,0, 0.04);
 }
 
+settings {
 
+	position: relative;
+	display: block;
+}
 
+setting-group:first-of-type {
+	border-top-right-radius: 3px;
+	border-top-left-radius: 3px;
+	margin-top: 6px;
+}
+setting-group {
+	padding: 10px;
+	margin: 0 6px;
+	border-width: 1px;
+	border-style: solid;
+	position: relative;
+	display: block;
+	border-bottom: none;
+}
+setting-group:last-of-type {
+	border-width: 1px;
+	border-style: solid;
+	border-bottom-right-radius: 3px;
+	border-bottom-left-radius: 3px;
+	margin-bottom: 6px;
+}
 
-
-
-
-
+setting-item input {
+	width: 100%;
+}
 
 
 
