--- a/src/view/html/index.html
+++ b/src/view/html/index.html
@@ -78,6 +78,29 @@
 							<input type=range min=0 max=100 value=0 step=10 palette="slider">
 						</setting-item>
 					</setting-group>
+
+					<setting-group palette="soft">
+						<span type="group-title">LIFX Bulb</span>
+						<setting-item>
+							<span type="description">Hue: 200</span>
+							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+						</setting-item>
+
+						<setting-item>
+							<span type="description">Brightness: 200</span>
+							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+						</setting-item>
+
+						<setting-item>
+							<span type="description">Rate: 0ms</span>
+							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+						</setting-item>
+
+						<setting-item>
+							<span type="description">Period: 0s</span>
+							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+						</setting-item>
+					</setting-group>
 				</settings>
 
 				<application-buttons class="group">
