--- a/src/view/scss/_grid.scss
+++ b/src/view/scss/_grid.scss
@@ -23,7 +23,7 @@ html, body {
 
 [grid~="2/3"] {
 	width: calc(61.80339887498948% - 1px);
-	margin-right: 1px;
+	border-right: 1px solid rgba(0,0,0,0.4);
 }
 
 [grid~="3/3"] {
