--- a/src/view/html/index.html
+++ b/src/view/html/index.html
@@ -13,20 +13,20 @@
 
 
 			<content grid="2/3">
-				<title-buttons class="group" palette="primary">
+				<title-buttons class="group" palette="primary" layer="1">
 					<div id="closeButton" button="circle" palette="danger"></div>
 					<div id="minimizeButton" button="circle" palette="warning"></div>
 				</title-buttons>
 
-				<heartrate palette="primary">
+				<heartrate palette="primary" layer="1">
 						<span type="title">HeartRate</span>
 						<span number="bpm">172</span>
 				</heartrate>
 
-				<div class="group">
+				<div class="group" layer="2">
 					<date grid palette="primary">
-						<span id="time" number="time">9:45AM</span>
-						<span id="date" number="date">7/28/2015</span>
+						<span id="time" number="time"></span>
+						<span id="date" number="date"></span>
 					</date>
 
 					<average grid palette="primary">
@@ -50,18 +50,18 @@
 			</content>
 
 			<sidebar grid="1/3" palette="primary">
-
+				<span type="setting-title">Alarm Settings</span>
 				<settings>
 					<setting-group palette="soft">
 						<span type="group-title">Minimum HR</span>
 						<setting-item>
-							<span type="description">Rate: 150bpm</span>
-							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+							<span type="description">Rate: <output id="minRate">30</output>bpm</span>
+							<input oninput="outputUpdate(value, 'minRate')" type=range min=30 max=100 value=0 step=5 palette="slider">
 						</setting-item>
 
 						<setting-item>
-							<span type="description">Period: 0s</span>
-							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+							<span type="description">Period: <output id="minPeriod">0</output>s</span>
+							<input oninput="outputUpdate(value, 'minPeriod')" type=range min=0 max=120 value=0 step=5 palette="slider">
 						</setting-item>
 					</setting-group>
 						
@@ -69,46 +69,46 @@
 					<setting-group palette="soft">
 						<span type="group-title">Maximum HR</span>
 						<setting-item>
-							<span type="description">Rate: 150bpm</span>
-							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+							<span type="description">Rate: <output id="maxRate">100</output>bpm</span>
+							<input oninput="outputUpdate(value, 'maxRate')" type=range min=100 max=210 value=0 step=5 palette="slider">
 						</setting-item>
 
 						<setting-item>
-							<span type="description">Period: 0s</span>
-							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+							<span type="description">Period: <output id="maxPeriod">0</output>s</span>
+							<input oninput="outputUpdate(value, 'maxPeriod')" type=range min=0 max=120 value=0 step=5 palette="slider">
 						</setting-item>
 					</setting-group>
 
 					<setting-group palette="soft">
 						<span type="group-title">LIFX Bulb</span>
 						<setting-item>
-							<span type="description">Hue: 200</span>
-							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+							<span type="description">Hue: <output id="bulbHue">0</output></span>
+							<input oninput="outputUpdate(value, 'bulbHue')" type=range min=0 max=360 value=0 step=20 palette="slider">
 						</setting-item>
 
 						<setting-item>
-							<span type="description">Brightness: 200</span>
-							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+							<span type="description">Brightness: <output id="bulbBrightness">0</output></span>
+							<input oninput="outputUpdate(value, 'bulbBrightness')" type=range min=0 max=100 value=0 step=5 palette="slider">
 						</setting-item>
 
 						<setting-item>
-							<span type="description">Rate: 0ms</span>
-							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+							<span type="description">Rate: <output id="bulbRate">0</output>ms</span>
+							<input oninput="outputUpdate(value, 'bulbRate')" type=range min=0 max=100 value=0 step=5 palette="slider">
 						</setting-item>
 
 						<setting-item>
-							<span type="description">Period: 0s</span>
-							<input type=range min=0 max=100 value=0 step=10 palette="slider">
+							<span type="description">Period: <output id="bulbPeriod">0</output>s</span>
+							<input oninput="outputUpdate(value, 'bulbPeriod')" type=range min=0 max=100 value=0 step=10 palette="slider">
 						</setting-item>
 					</setting-group>
 				</settings>
 
 				<application-buttons class="group">
-					<div id="resetButton" button="box-text" palette="soft soft-button">
+					<div id="resetButton" button="box-text" layer="1" palette="soft soft-button">
 						Reset Bulb
 					</div>
 
-					<div id="clearButton" button="box-text" palette="soft soft-button">
+					<div id="clearButton" button="box-text" layer="1" palette="soft soft-button">
 						Clear Log
 					</div>
 				</application-buttons>
