--- a/src/view/scss/_elements.scss
+++ b/src/view/scss/_elements.scss
@@ -116,6 +116,13 @@ log {
 	align-self: center;
 }
 
+[type~="setting-title"] {
+	font-size: 19px;
+	font-weight: 100;
+	padding: 10px 0 0;
+	display: block;
+	text-align: center;
+}
 [type~="group-title"] {
 	font-size: 19px;
 	font-weight: 100;
@@ -154,7 +161,7 @@ log-content {
 	-webkit-app-region: no-drag;
 }
 
-log-item:nth-of-type(2n) {
+log-item:nth-of-type(2n+1) {
 	background-color: rgba(255,255,255, 0.05);
 }
 
